Ajustes nas dimensoes dos elementos

--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The BarberShop</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./src/css/style.css">
 </head>
 <body>
 
-    
-
     <header>
         <div class="logo">
-            <img src="img/image-removebg-preview.png" alt="Logo">
+            <img src="./src/img/logo.png" alt="Logo">
             <p>Barbearia Sofisticada</p>
         </div>
         <nav class="navbar">
@@ -34,14 +32,14 @@
                 </a>
             </ul>
             <ul class="redes-sociais">
-                <a href="#">
-                    <li><img src="img/iconfinder-social-media-applications-3instagram-4102579_113804.svg" alt="Instagram"></li>
+                <a href="https://github.com/matheusgustavo9" target="_blank">
+                    <li><img src="./src/img/instagram.svg" alt="Instagram"></li>
                 </a>
-                <a href="#">
-                    <li><img src="img/facebook_icon_130940.svg" alt="Facebook"></li>
+                <a href="https://github.com/matheusgustavo9" target="_blank">
+                    <li><img src="./src/img/facebook.svg" alt="Facebook"></li>
                 </a>
-                <a href="#">
-                    <li><img src="img/Twitter_icon-icons.com_66803.svg" alt="Twitter"></li>
+                <a href="https://github.com/matheusgustavo9" target="_blank">
+                    <li><img src="./src/img/twitter.svg" alt="Twitter"></li>
                 </a>
             </ul>
         </nav>
@@ -214,7 +212,7 @@
         <p>Copyright © 2023 matheusgustavo9.github.io/matheusgustavo Todos os direitos reservados.</p>
     </footer>
 
-    <div class="informacoes-site">
+    <!-- <div class="informacoes-site">
         <div class="text-info-site">
             <h2><span class="nome-projeto">Layout Barbearia</span> - 01/11/2023</h2>
             <p>Desenvolvi este site logo após concluir o curso "Introdução à Programação Front-End" no Senai. Apliquei imediatamente os conhecimentos em HTML, CSS e JavaScript, marcando assim o início da minha jornada no Front-End. Utilizei referências encontradas na internet para a criação do site.
@@ -239,7 +237,7 @@
                 <img src="img/javascript_original_logo_icon_146455.svg" alt="JavaScript">
             </div>
         </div>
-    </div>
+    </div> -->
 
     <script src="js/script.js"></script>
 </body>
