--- a/index.html
+++ b/index.html
@@ -3,8 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The BarberShop</title>
+    <title>Barbearia Sofisticada</title>
     <link rel="stylesheet" href="./src/css/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+
 </head>
 <body>
 
@@ -15,32 +29,32 @@
         </div>
         <nav class="navbar">
             <ul>
-                <a href="#inicio">
-                    <li>Inicio</li>
-                </a>
-                <a href="#quem-somos">
-                    <li>Quem Somos</li>
-                </a>
-                <a href="#servicos">
-                    <li>Serviços</li>
-                </a>
-                <a href="#galeria">
-                    <li>Galeria</li>
-                </a>
-                <a href="#contato">
-                    <li>Contato</li>
-                </a>
+                <li>
+                    <a href="#inicio">Inicio</a>
+                </li>
+                <li>
+                    <a href="#quem-somos">Quem Somos</a>
+                </li>
+                <li>
+                    <a href="#servicos">Serviços</a>
+                </li>
+                <li>
+                    <a href="#galeria">Galeria</a>
+                </li>
+                <li>
+                    <a href="#contato">Contato</a>
+                </li>
             </ul>
             <ul class="redes-sociais">
-                <a href="https://github.com/matheusgustavo9" target="_blank">
-                    <li><img src="./src/img/instagram.svg" alt="Instagram"></li>
-                </a>
-                <a href="https://github.com/matheusgustavo9" target="_blank">
-                    <li><img src="./src/img/facebook.svg" alt="Facebook"></li>
-                </a>
-                <a href="https://github.com/matheusgustavo9" target="_blank">
-                    <li><img src="./src/img/twitter.svg" alt="Twitter"></li>
-                </a>
+                <li>
+                    <a href="https://github.com/matheusgustavo9" target="_blank"><img src="./src/img/instagram.svg" alt="Instagram"></a>
+                </li>
+                <li>
+                    <a href="https://github.com/matheusgustavo9" target="_blank"><img src="./src/img/facebook.svg" alt="Facebook"></a>
+                </li>
+                <li>
+                    <a href="https://github.com/matheusgustavo9" target="_blank"><img src="./src/img/twitter.svg" alt="Twitter"></a>
+                </li>
             </ul>
         </nav>
     </header>
