--- a/index.html
+++ b/index.html
@@ -61,11 +61,8 @@
         
         <section id="quem-somos">
             <div class="sobre">
-                <div class="images-sobre">
-                    <img src="https://images.pexels.com/photos/2076930/pexels-photo-2076930.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
-                    <img src="https://images.pexels.com/photos/2076932/pexels-photo-2076932.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
-                    <img src="https://img.freepik.com/fotos-gratis/homem-em-um-salao-de-barbearia-fazendo-o-corte-de-cabelo-e-barba_1303-20953.jpg?size=626&ext=jpg&ga=GA1.1.1546980028.1703808000&semt=ais" alt="">
-                    <img src="https://images.pexels.com/photos/2040189/pexels-photo-2040189.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
+                <div class="img-sobre">
+                    <img src="./src/img/imgs-barbearia.svg" alt="Imagens Barbearia"></img>
                 </div>
                 
                 <article class="text-sobre">
