--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <section id="servicos">
             <div class="icon-services">
-                <img src="https://i.pinimg.com/originals/ce/2e/b5/ce2eb5c24ec4ea4a59ec9a82905765d8.png" alt="">
+                <img src="./src/img/logo-servicos.png" alt="Logo Serviços">
             </div>
             <div class="servicos">
                 <div class="barba-cabelo">
@@ -242,13 +242,13 @@
         </div>
     </div> -->
 
-    <div class="voltar-ao-topo">
-        <button id="return" class="bi bi-chevron-double-up"></button>
-    </div>
+    <button class="voltar-ao-topo bi bi-chevron-double-up"></button>
 
     <div id="tela-carregamento">
         <div id="carregando"></div>
     </div>
-    <script src="./src/js/script.js"></script>
+    <script src="./src/js/agendar.js"></script>
+    <script src="./src/js/voltar-ao-topo.js"></script>
+    <script src="./src/js/tela-de-carregamento.js"></script>
 </body>
 </html>
